tests/whole_screen/snapshots/whole_screen__ctrl_w_adds_this_repositorys_other_checkouts.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 1,10 scrolled 0
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ Search    a session, or a branch                                             │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
| Resume a session · 3 of 3 · this repository's worktrees                        |
|                                                                                |
|╭──────────────────────────────╮ ╭─────────────────────────────────────────────╮|
|│ › fix the failing parser tes │ │ › fix the failing parser test               │|
|│   just now · main            │ │                                             │|
|│                              │ │                                             │|
|│   draft the parser rewrite   │ │                                             │|
|│   just now · feature         │ │                                             │|
|│                              │ │                                             │|
|│   cut the release notes      │ │                                             │|
|│   just now · release · …kout │ │                                             │|
|│                              │ │                                             │|
|│                              │ │                                             │|
|│                              │ │                                             │|
|│                              │ │                                             │|
|│                              │ │ ────────────────────────────────────────────│|
|│                              │ │ just now · 1 message · main                 │|
|│                              │ │ Enter to resume · Esc to cancel             │|
|╰──────────────────────────────╯ ╰─────────────────────────────────────────────╯|
|                                                                                |
| ctrl+a all projects · ctrl+b this branch · ctrl+w hide worktrees · esc         |
