tests/whole_screen/snapshots/whole_screen__esc_closes_the_command_list_and_keeps_the_line.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 21,5 scrolled 0
|│ Recent sessions                                                             ││|
|│                                                                             ││|
|│ No earlier session for this workspace                                       ││|
|│                                                                             │┃|
|│ ─────────────────────────────────────────────────────────────────────────── │┃|
|│                                                                             │┃|
|│ Tips                                                                        │┃|
|│                                                                             │┃|
|│ · /          opens the command list                                         │┃|
|│ · \ enter    adds a line without sending                                    │┃|
|│ · shift+tab  steps the permission mode                                      │┃|
|│ · ctrl+c     clears the line typed so far                                   │┃|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|                                                                               ┃|
|Warning: No models available. Use /login or set an API key environment         ┃|
|variable. Then use /model to select a model.                                   ┃|
|                                                                               ┃|
|                                                                                |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ › /                                                                          │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
