tests/whole_screen/snapshots/whole_screen__esc_mid_turn_closes_the_command_list_and_the_turn_runs_on.snap
---
source: tests/whole_screen/main.rs
expression: on_the_first_beat(&picture)
---
80x24 cursor 21,5 scrolled 0
|│ ─────────────────────────────────────────────────────────────────────────── ││|
|│                                                                             ││|
|│ Tips                                                                        ││|
|│                                                                             ││|
|│ · /          opens the command list                                         ││|
|│ · \ enter    adds a line without sending                                    ││|
|│ · shift+tab  steps the permission mode                                      │┃|
|│ · ctrl+c     clears the line typed so far                                   │┃|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|› start it                                                                     ┃|
|                                                                               ┃|
|● Bash(sleep 30)                                                               ●|
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)                              ┃|
|                                                                               ┃|
|It is started. That is all.                                                    ┃|
|                                                                               ┃|
|✳ writing (0s · ↓ 4 · esc to interrupt)                                        ┃|
|                                                                               ┃|
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ › /                                                                          │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle) · 1 command           anthropic · claude-test-1|
