tests/whole_screen/snapshots/whole_screen__escape_while_room_is_being_made_stops_it_and_replaces_nothing.snap
---
source: tests/whole_screen/main.rs
expression: picture
---
80x24 cursor 21,4 scrolled 0
|│ · ctrl+c     clears the line typed so far                                   ││|
|╰─────────────────────────────────────────────────────────────────────────────╯│|
|                                                                               │|
|› the first thing                                                              │|
|                                                                               │|
|one answer                                                                     │|
|                                                                               │|
|› the second thing                                                             │|
|                                                                               ┃|
|two answer                                                                     ┃|
|                                                                               ┃|
|› the third thing                                                              ┃|
|                                                                               ┃|
|three answer                                                                   ┃|
|                                                                               ┃|
|› /compact                                                                     ┃|
|                                                                               ●|
|⎿ ! stopped                                                                    ┃|
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
