tests/whole_screen/snapshots/whole_screen__every_way_a_terminal_spells_a_newline_grows_the_box_and_sends_nothing.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 21,8 scrolled 0
|│                                                                             ││|
|│ ─────────────────────────────────────────────────────────────────────────── ││|
|│                                                                             ││|
|│ Tips                                                                        ││|
|│                                                                             ││|
|│ · /          opens the command list                                         │┃|
|│ · \ enter    adds a line without sending                                    │┃|
|│ · shift+tab  steps the permission mode                                      │┃|
|│ · ctrl+c     clears the line typed so far                                   │┃|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|                                                                               ┃|
|Warning: No models available. Use /login or set an API key environment         ┃|
|variable. Then use /model to select a model.                                   ┃|
|                                                                               ┃|
|                                                                                |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ › one                                                                        │|
|│   two                                                                        │|
|│   three                                                                      │|
|│   four                                                                       │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
