tests/whole_screen/snapshots/whole_screen__exit_mid_turn_is_refused_with_its_reason.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
60x24 cursor 23,0 scrolled 0
|│ No recent sessions                                      ││|
|│                                                         ││|
|│ ─────────────────────────────────────────────────────── ││|
|│                                                         ││|
|│ Tips                                                    ││|
|│                                                         │┃|
|│ · /          opens the command list                     │┃|
|│ · \ enter    adds a line without sending                │┃|
|│ · shift+tab  steps the permission mode                  │┃|
|│ · ctrl+c     clears the line typed so far               │┃|
|╰─────────────────────────────────────────────────────────╯┃|
|                                                           ┃|
|› start it                                                 ┃|
|                                                           ┃|
|● Bash(sleep 30)                                           ┃|
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)          ┃|
|                                                           ┃|
|It is started. That is all.                                ┃|
|────────────────────────────────────────────────────────────|
|                                                            |
|/exit                                                       |
|ends the session, turn and all                              |
|                                                            |
|esc to close                                                |
