tests/whole_screen/snapshots/whole_screen__fast_lines_where_no_panel_fits.snap
---
source: tests/whole_screen/main.rs
assertion_line: 3599
expression: picture
---
80x8 cursor 6,4 scrolled 0
|  /fast on — 75-100% more than Standard                                        │|
|  /fast off — The standard price and speed                                     │|
|                                                                               ┃|
|                                                                                |
|                                                                100% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
