tests/whole_screen/snapshots/whole_screen__fast_panel_key_unicode_40.snap
---
source: tests/whole_screen/main.rs
assertion_line: 3568
expression: picture
---
40x24 cursor 23,0 scrolled 0
|CRUCIBLE                                |
|/…/workspace                            |
|                                        |
|› /fast                                 |
|                                        |
|                                        |
|                                        |
|────────────────────────────────────────|
|                                        |
|Speed · google · gemini-3.8-flash · Goog|
|                                        |
|For Tier 2 and Tier 3 accounts only.    |
|Google serves a priority request at     |
|standard speed when priority is         |
|congested, and bills it at the standard |
|price.                                  |
|                                        |
|› Standard                              |
|  The standard price and speed          |
|                                        |
|  Fast                                  |
|  75-100% more than Standard            |
|                                        |
|enter to choose · esc to cancel         |
